# ogl

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  Doxyfile  Makefile  linecount.sh  win_build_debug.bat
resources/models/BobboMob/: BobboMob.mtl
resources/models/BruceMob/: BruceMob.mtl
resources/models/JompaMob/: JompaMob.mtl
resources/models/Knight/: Knight_WIP.blend  Knight_WIP.blend1  Knight_WIP.mtl
resources/models/MangeMob/: MangeAttack.blend  MangeAttack1.mtl  MangeAttack2.mtl  MangeMob.mtl  MangeWalk2.mtl  gun04.mtl
resources/models/abbe/: abbe.mtl  abbeAttack2.mtl  abbeIdle.mtl  abbeRun2.mtl  abbe_knight.mtl  abbe_trim_18736.mtl  abbe_warrior.blend  abbe_warrior_v1.mtl  abbe_warrior_wip.blend  abbe_warrior_wip.blend1  abbe_wip.blend
resources/models/abbe/Sallet_Helmet/: 13585_Sallet_Helmet_v1_L3.mtl
resources/models/cow/: cow.mtl
resources/models/cube_low/: cube.blend
resources/models/gran/: gran.blend  gran.mtl
resources/models/low-poly-pinetree/: low-poly-pinetree.mtl
resources/models/low-poly-pinetree2/: pineTree.blend  pineTree.mtl
resources/models/warrior/: BodyTest5.blend  BodyTest5.mtl  Cyber_Ninja_Warrior.mtl
resources/shaders/: 3D.frag  3D.vert  basic.frag  basic.shader  basic.vert  color_from_attr.frag  color_from_attr.vert  gradient.shader  gradient.vert  horizontal.frag  horizontal.vert  shader.frag  spinning.frag  spinning.vert  texture.frag
resources/shaders/fragment/: 2TEX_AB.frag  2TEX_lerp.frag  2TEX_lerp_mix.frag  BlinnPhongTEX.frag  Phong2TEX_AB.frag  PhongConstColor.frag  PhongMTL.frag  PhongMTL_FOG.frag  PhongMTL_FOG_diffTEX.frag  PhongMTL_diffTEX.frag  PhongTEX.frag  PhongVertColor.frag  ScreenFlash.frag  Skybox.frag  TEX.frag  TerrainBlend.frag  Text.frag  constColor.frag  text.frag  uniformColor.frag  varColor.frag
resources/shaders/vertex/: 2D.vert  3D.vert  3DLighting_Tex.vert  3DLighting_VertColor.vert  3D_POS_NORM_TEX_TAN_BIT.vert  3D_POS_NORM_TEX_TAN_BIT_FOG.vert  3D_TEX.vert  PhongTEX.vert  Skybox.vert  Terrain.vert  Text.vert  TreeInstanced.vert  text.vert  wonky_ass_shader.vert
src/: AnimatedInstanceRenderer.cpp  AnimatedInstanceRenderer.h  AssimpModel.cpp  AssimpModel.h  Camera.cpp  Camera.h  Common.cpp  Common.h  Enums.h  Error.cpp  Error.h  Frametimer.h  IndexBuffer.cpp  IndexBuffer.h  InstancedRenderer.cpp  InstancedRenderer.h  Lighting.h  Mesh.h  MeshRenderable.cpp  MeshRenderable.h  Model.cpp  Model.h  ObjLoader.cpp  ObjLoader.h  Player.cpp  Player.h  Renderable.cpp  Renderable.h  Renderer.cpp  Renderer.h  RenderingContext.cpp  RenderingContext.h  Scene.cpp  Scene.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  TerrainChunk.cpp  TerrainChunk.h  (+15 more)
src/IO/: UserInput.cpp  UserInput.h
src/Input/: Controls.h  InputSource.h  KeyboardInput.cpp  KeyboardInput.h  UserInput.cpp  UserInput.h
src/KHR/: khrplatform.h
src/Terrain/: InstancedTreeRenderer.cpp  InstancedTreeRenderer.h  TerrainChunk.cpp  TerrainChunk.h  TerrainConfig.h  TerrainGenerator.cpp  TerrainGenerator.h
src/game/: Audio.cpp  Audio.h  Database.h  Enemy.cpp  Enemy.h  EnemyData.h  EnemySpawner.cpp  EnemySpawner.h  Entity.h  GameClock.h  GameLoop.h  Leaderboard.h  Player.cpp  Player.h  ResourceNode.h  Score.h  World.h
src/glad/: glad.c  glad.h
src/testprograms/: 3D.cpp  assimpTest.cpp  boxes.cpp  cameratest.cpp  chunktest.cpp  hello_triangle_indexed.cpp  house.cpp  hudtest.cpp  lightingtest.cpp  mapTest.cpp  maptest.cpp  menutest.cpp  mergedtest.cpp  movementtest.cpp  newmenutest.cpp  scenetest.cpp  shaders_class.cpp  terraintest.cpp  test.cpp  test2.cpp  textures.cpp  transformations.cpp  triangle.cpp  triangle_colorgradient.cpp  trianglemange.cpp
src/ui/: DeathScreen.cpp  DeathScreen.h  GameState.h  HUD.cpp  HUD.h  HUDEntityImpl.cpp  HUDEntityImpl.h  Leaderboard.cpp  Leaderboard.h  LoadingScreen.cpp  LoadingScreen.h  MainMenu.cpp  MainMenu.h  PauseMenu.cpp  PauseMenu.h  TextRenderer.cpp  TextRenderer.h  UIConfig.h  UIManager.cpp  UIManager.h
